dnl Process this file with autoconf to produce a configure script for lmdbg.
dnl
dnl Copyright 2003 Aleksey Cheusov <vle@gmx.net>
dnl
dnl This program is free software; you can redistribute it and/or modify it
dnl under the terms of the GNU General Public License as published by the
dnl Free Software Foundation; either version 1, or (at your option) any
dnl later version.
dnl
dnl This program is distributed in the hope that it will be useful, but
dnl WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License along
dnl with this program; if not, write to the Free Software Foundation, Inc.,
dnl 675 Mass Ave, Cambridge, MA 02139, USA.
dnl
dnl $Id: configure.in,v 1.6 2009-02-21 11:44:48 cheusov Exp $
dnl
dnl Flag conventions:
dnl     CFLAGS and LDFLAGS should be settable on the make commandline
dnl             for optimization and stripping.
dnl     WCFLAGS and WLDFLAGS are warnings and stuff that we like (e.g., -pipe)
dnl     LIBOBJS is an automatically-generated list of extra objects we need

# Process this file with autoconf to produce a configure script.
define(VERSION, 0.4.1)

AC_PREREQ(2.53)

AC_INIT([lmdbg], [VERSION], [vle@gmx.net])
AC_CONFIG_SRCDIR([lmdbg.c])
AC_CONFIG_HEADER([config.h])

echo

######################################################################
echo 'Checks for programs.'

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_AWK
AC_PROG_MAKE_SET
AC_CHECK_PROG(AR,ar,ar)

echo

LMDBG_VERSION=VERSION

AC_CANONICAL_HOST

######################################################################
echo 'Checks for header files.'

AC_HEADER_STDC
AC_CHECK_HEADERS(stdio.h stdlib.h string.h stdarg.h)
AC_CHECK_HEADERS(unistd.h fcntl.h malloc.h assert.h execinfo.h)

echo

######################################################################
echo 'Checks for typedefs, structures, and compiler characteristics.'

AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T

echo

######################################################################
echo 'Checks for library functions.'

AC_FUNC_ALLOCA
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(atexit dup2 putenv strdup memalign)

AC_CHECK_LIB(dl, dlopen, [LIBS="$LIBS -ldl"])

echo
######################################################################

AC_SUBST(LMDBG_VERSION)
AC_SUBST(EXEEXT)

######################################################################
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([lmdbg-sym],   [chmod +x lmdbg-sym])
AC_CONFIG_FILES([lmdbg-run],   [chmod +x lmdbg-run])
AC_CONFIG_FILES([lmdbg-check], [chmod +x lmdbg-check])
AC_CONFIG_FILES([lmdbg-leak-check], [chmod +x lmdbg-leak-check])

AC_OUTPUT
